--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
         </footer>
 
 
+        <!-- script de função de animação ao clicar no botão contato -->
+
         <script>
             $(document).ready(function() {
                 $('#botao-scroll').click(function(){
