--- a/vendas.html
+++ b/vendas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/262b954398.js" crossorigin="anonymous"></script>
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Projeto-05</title>
 </head>
@@ -62,8 +64,8 @@
                     </div><!--fill-barra-->
 
                     <div class="valor-pesquisa">
-                        <span>R$5.000</span>
-                        <span>R$500.000</span>
+                        <span id="valor_atual">R$5.000</span>
+                        <span>R$70.000</span>
                     </div>
 
                 </div><!--filtro-preco-->
